--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,9 @@ body {
   align-items: center;
   font-weight: bold;
   transition: background-color 0.3s ease;
-  padding: 15px 2px;
+  padding: 20px 5px;
+  border-radius: 5px;
+  opacity: 0.7;
 }
 
 .clue-box.revealed {
@@ -74,8 +76,10 @@ body {
   align-items: center;
   font-size: 1.5em;
   font-weight: bold;
-  padding: 15px 5px;
+  padding: 20px 5px;
   transition: background-color 0.3s ease;
+  border-radius: 5px;
+  opacity: 0.7;
 }
 
 
@@ -92,6 +96,7 @@ input {
   font-size: 1em; /* Adjust font size for readability */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add shadow for depth */
   transition: all 0.3s ease; /* Smooth transition for hover effects */
+  opacity: 0.7;
 }
 
 input:focus {
@@ -99,6 +104,7 @@ input:focus {
   border-color: #384B70; 
   background-color: #E9EFEC; /* Darken background on focus */
   box-shadow: 0 0 10px rgba(222, 78, 44, 0.5); /* Add glow effect on focus */
+  opacity: 1;
 }
 
 input::placeholder {
@@ -119,6 +125,7 @@ button {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
   align-items: center;
   text-align: center;
+  opacity: 1;
 }
 
 /* Hover effects */
@@ -136,7 +143,7 @@ button:active {
 button:disabled {
   background-color: #E2C290;
   cursor: not-allowed;
-  opacity: 0.7;
+  opacity: 0.5;
 }
 
 p {
